[package]
name = "substreams-solana-resolved-address-lookup-table"
version = "0.1.0"
description = "Resolved Address lookup tables Substreams"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.4.0"
wasm-bindgen = "0.2.79"
prost = "0.11.0"
prost-types = "0.11.0"
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
thiserror = "1.0.25"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
